# python-pretty-print

./: .gitignore  README.md  __init__.py  package-structure.md  pyproject.toml  visual_test.py
examples/: __init__.py  basic.py
python_pretty_print/: __init__.py  colors.py  print_with_color_tags.py
scripts/: print_with_color_tags.py
src/python_pretty_print/: colors.py
tests/: __init__.py  run_all.py  visual_check_helpers.py  visual_check_pretty_print.py  visual_check_section_multicolor.py  visual_check_section_palette.py  visual_check_section_visual_cases.py
