[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pretty-print"
version = "0.1.0"
description = "Pretty-print helper with simple color tags"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["python_pretty_print"]
